k8s/06-django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: srishtisingh1/simple-extraction-demo:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media-storage
              mountPath: /app/media

      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc
